--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
 
           <div class="col-lg-3 col-md-6" data-aos="fade-up" data-aos-delay="400">
             <div class="member">
-              <img src="assets/img/team-4.jpg" class="img-fluid" alt="">
+              <img src="assets/img/kinan.jpg" class="img-fluid" alt="">
               <div class="member-info">
                 <div class="member-info-content">
                   <h4>Kinanthy </h4>
