--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
+  <meta name="dicoding:email" content="F2342B329@dicoding.org">
+       
 
   <title>Indonesia Culture</title>
   <meta content="" name="description">
